--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -1,14 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+{{>card}}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
-<body>
-    {{{body}}}
-</body>
-
-</html>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="https://cdn.jsdelivr.net/npm/socket.io-client@4.8.1/dist/socket.io.min.js"></script>
+<script src="/js/index.js"></script>
