barra de navegacion

--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -15,6 +15,18 @@
 
 <body>
     <div class="container col-6">
+        <h1>Ecommerce Tech</h1>
+
+        <div class="navbar">
+            <div class="navLinks">
+                <a href="/">Home</a>
+                <a href="/realTimeProducts">Products</a>
+                <a href="/cart">Cart</a>
+                <a href="/login">Login</a>
+                <a href="/register">Register</a>
+            </div>
+
+        </div>
 
         <h1>Formulario para Ingresar Productos</h1>
         <br>
