--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -92,3 +92,27 @@ h1 {
   width: 400px;
   min-height: 300px;
 }
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: left;
+  background-color: #f8f9fa;
+  padding: 10px 20px;
+}
+
+.navLinks {
+  display: flex;
+  gap: 15px;
+}
+.navLinks a {
+  text-decoration: none;
+  color: #007bff;
+  font-weight: bold;
+}
+.navLinks a:hover {
+  text-decoration: underline;
+}
+.navLinks a:visited {
+  color: #0056b3;
+}
