--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -1,5 +1,5 @@
+{{>navbar}}
 {{>card}}
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://cdn.jsdelivr.net/npm/socket.io-client@4.8.1/dist/socket.io.min.js"></script>
-<script src="/js/index.js"></script>
