--- a/src/views/partials/card.handlebars
+++ b/src/views/partials/card.handlebars
@@ -12,6 +12,9 @@
             <p>Stock: {{this.stock}}</p>
             <p>Categoria: {{this.category}}</p>
         </div>
+        <div class="actions">
+            <button class="btnAgregar">Agregar al Carrito</button>
+        </div>
     </div>
     {{/each}}
 
