--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -116,3 +116,21 @@ h1 {
 .navLinks a:visited {
   color: #0056b3;
 }
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+th,
+td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+th {
+  background-color: #f2f2f2;
+}
+tfoot {
+  font-weight: bold;
+}
